welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: not found: value getMondeLargeure
		if (getX()==getMondeLargeure()-1 && getY()==getMondeHauteur()-1) {return true}
                            ^