welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {

	def finish () {
		if (getX()==getMondeLargeure()-1 && getY()==getMondeHauteur()-1) {return true}
		return false
	}

}
